[gd_scene load_steps=6 format=3 uid="uid://72ox32181fxs"]

[ext_resource type="Script" path="res://scenes/menu_UI/new_mission_menu/new_mission_menu.gd" id="1_fi2sr"]
[ext_resource type="PackedScene" uid="uid://kb5ppulyuyb6" path="res://scenes/menu_UI/shop/shop_ui.tscn" id="2_d6yen"]
[ext_resource type="Script" path="res://scenes/menu_UI/new_mission_menu/ConversationDisplayer.gd" id="2_gdgyj"]
[ext_resource type="PackedScene" uid="uid://cvmm8squ78d8y" path="res://scenes/menu_UI/inventory/inventory_ui.tscn" id="4_yxdvd"]
[ext_resource type="Script" path="res://scenes/menu_UI/new_mission_menu/start_warning_popup.gd" id="5_1llwq"]

[node name="NewMissionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi2sr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13, 0.145167, 0.26, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MissionCallDisplay" type="RichTextLabel" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_gdgyj")
auto_start_delay = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ShopUI" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_d6yen")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryUI" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_yxdvd")]
unique_name_in_owner = true
layout_mode = 2

[node name="spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainMenuBttn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartMissionBttn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Go to Crime Scene"

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(200, 100)
script = ExtResource("5_1llwq")

[node name="PanelContainer" type="PanelContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/PanelContainer"]
layout_mode = 2
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Need to select a cleaning tool to start.[/center]"

[node name="Button" type="Button" parent="PopupPanel/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Ok"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MainMenuBttn" to="." method="on_return_to_main_menu"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/StartMissionBttn" to="." method="on_start_mission"]
[connection signal="pressed" from="PopupPanel/PanelContainer/VBoxContainer/Button" to="PopupPanel" method="on_pressed_ok"]
